[tool.poetry]
name = "scru128"
version = "0.1.0"
description = "SCRU128: Sortable, Clock and Random number-based Unique identifier"
license = "Apache-2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
readme = "README.md"
homepage = "https://github.com/scru128/python"
keywords = ["identifier", "uuid", "guid", "ulid", "ksuid"]
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.scripts]
scru128 = "scru128.cli:generate"
scru128-inspect = "scru128.cli:inspect"

[tool.poetry.dependencies]
python = "^3.7.12"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
