[tool.poetry]
name = "scru128"
version = "3.0.1"
description = "SCRU128: Sortable, Clock and Random number-based Unique identifier"
license = "Apache-2.0"
authors = ["LiosK <contact@mail.liosk.net>"]
readme = "README.md"
homepage = "https://github.com/scru128/python"
keywords = ["identifier", "uuid", "guid", "ulid", "ksuid"]
classifiers = ["Operating System :: OS Independent"]

[tool.poetry.scripts]
scru128 = "scru128.cli:generate"
scru128-inspect = "scru128.cli:inspect"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
